# aws_iac

./: .gitignore  README.md  flake.nix
app/: .dockerignore  Dockerfile  hello.py  index.html
app/probit/: CMakeLists.txt
app/probit/src/: probit_api.cpp
cdk/: README.md  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
lambda/: package-lock.json  package.json
lambda/hello/: index.ts
